# YetAnotherAttemptToOpenGL

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/ciglagl/: ebo.h  shader.h  texture.h  vao.h  vbo.h
res/shaders/: default.frag  default.vert
scripts/: format-everything.sh  glad.py
src/: ebo.cpp  main.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
